# FastqScan

./: .gitignore  Cargo.toml  README.md
data/: README.md
src/: main.rs  runners.rs  tests.rs
